--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,10 @@
 </head>
 <body>
     <h1>Movie Recommendations</h1>
-    <form method="post">
-        <input type="text" name="query" placeholder="Enter a letter or word">
-        <button type="submit">Search</button>
+    <form action="/recommendations" method="post">
+        <label for="query">Enter a letter, word, or movie genre:</label><br>
+        <input type="text" id="query" name="query"><br>
+        <input type="submit" value="Search">
     </form>
-    {% if recommendations %}
-        <h2>Recommendations:</h2>
-        <ul>
-            {% for movie in recommendations %}
-                <li>{{ movie.title }} ({{ movie.genre }})</li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No recommendations found for your query.</p>
-    {% endif %}
 </body>
 </html>
