--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,9 @@
             padding: 10px;
             font-size: 16px;
             width: 100%;
+            max-width: 300px;
             margin-bottom: 10px;
+            box-sizing: border-box;
         }
         input[type="submit"] {
             padding: 10px 20px;
