--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('movies.jpg');
+            background-image: url('movies.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
