--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -7,20 +7,20 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('/static/images/movies.jpeg');
+            background-image: url('/static/images/movies.jpeg'); /* Adjusted path for deployment */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             margin: 0;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start; /* Align content to the left side of the screen */
             align-items: center;
             height: 100vh;
         }
         .container {
             text-align: center;
             max-width: 400px;
-            width: 100%;
+            width: 50%; /* Adjust width as needed */
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.9);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,6 +35,7 @@
         ul {
             list-style-type: none;
             padding: 0;
+            text-align: left; /* Align list items to the left */
         }
         li {
             background-color: white;
