--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -7,10 +7,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('/static/images/movies.jpeg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background-image: url('/static/images/movie.jpeg'), /* First image: movie poster */
+                              url('/static/images/movies2.jpeg'); /* Second image: additional picture */
+            background-size: contain, cover; /* Set size for both images */
+            background-position: top, bottom; /* Position the movie poster at the top and the additional picture at the bottom */
+            background-repeat: no-repeat, no-repeat; /* Prevent repetition for both images */
             margin: 0;
             padding: 20px;
         }
