--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
    <div class="container">
-       <h1>Movie Recommendations</h1>
+       <h1>Eric's Movie Recommendations</h1>
        <form action="/recommendations" method="post">
            <label for="query">Enter a letter, word, or movie genre:</label><br>
            <input type="text" id="query" name="query"><br>
