--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -57,7 +57,7 @@
    </style>
 </head>
 <body>
-   <h1>Movie Recommendations</h1>
+   <h1>Eric's Movie Recommendations</h1>
    {% if recommendations %}
        <h2>Here are some movie recommendations based on your search:</h2>
        <ul>
