--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
    <style>
        body {
            font-family: Arial, sans-serif;
-           background-color: #f0f0f0;
+           background-color: #1f9b9d;
            margin: 0;
            display: flex;
            justify-content: center;
@@ -19,7 +19,7 @@
            max-width: 500px;
            width: 100%;
            padding: 20px;
-           background-color: white;
+           background-color: rgba(90, 85, 93, 0.77);
            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
            border-radius: 8px;
        }
