--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
            max-width: 500px;
            width: 100%;
            padding: 20px;
-           background-color: rgba(90, 85, 93, 0.77);
+           background-color: rgb(226, 226, 226);
            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
            border-radius: 8px;
        }
