--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -7,7 +7,7 @@
    <style>
        body {
            font-family: Arial, sans-serif;
-           background-color: #f0f0f0;
+           background-color: #1f9b9d;
            margin: 0;
            padding: 20px;
        }
@@ -40,7 +40,7 @@
            padding: 0;
        }
        li {
-           background-color: white;
+           background-color: rgb(226, 226, 226);
            margin: 5px 0;
            padding: 10px;
            border: 1px solid #ddd;
