--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -29,6 +29,7 @@
            position: absolute;
            top: 0;
            right: 0;
+           transform: translateY(-50%);
            padding: 0 10px;
            font-style: italic;
            color: #555;
