--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -50,6 +50,9 @@
            display: flex;
            align-items: center;
        }
+       .movie-info span {
+           margin-right: 20px;
+       }
        .movie-info img {
            margin-right: 10px;
            max-width: 100px;
