--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -10,9 +10,22 @@
            background-color: #1f9b9d;
            margin: 0;
            padding: 20px;
+           display: flex;
+           justify-content: center;
+           align-items: center;
+           height: 100vh;
+       }
+       .container {
+           text-align: center;
+           max-width: 600px; /* Adjust maximum width of container */
+           width: 100%;
+           padding: 20px;
+           background-color: rgb(226, 226, 226);
+           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+           border-radius: 8px;
        }
        h1 {
-           color: #222222;
+           color: #333;
        }
        ul {
            list-style-type: none;
@@ -20,43 +33,21 @@
        }
        li {
            background-color: rgb(226, 226, 226);
-           margin: 5px 0;
+           margin: 10px 0; /* Increase margin for each movie recommendation */
            padding: 10px;
            border: 1px solid #ddd;
-           position: relative;
-       }
-       .rating {
-           position: absolute;
-           top: 0;
-           right: 0;
-           transform: translateY(50%);
-           padding: 0 10px;
-           font-style: italic;
-           color: #555;
-       }
-       a {
-           display: inline-block;
-           margin-top: 20px;
-           padding: 10px 20px;
-           font-size: 16px;
-           background-color: #007BFF;
-           color: white;
-           text-decoration: none;
-       }
-       a:hover {
-           background-color: #0056b3;
+           display: flex;
+           align-items: center; /* Vertically center items */
        }
        .movie-info {
-           display: flex;
-           align-items: center;
+           flex: 1; /* Distribute remaining space equally */
        }
        .movie-info span {
-           margin-right: 20px;
+           margin-right: 20px; /* Increase space between title/genre and poster */
        }
        .movie-info img {
-           margin-right: 10px;
-           max-width: 100px;
-           height: auto;
+           max-width: 100px; /* Limit poster width */
+           height: auto; /* Maintain aspect ratio */
        }
    </style>
 </head>
