--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -33,7 +33,7 @@
        }
        li {
            background-color: rgb(226, 226, 226);
-           padding: 10px;
+           padding: 5px; /* Adjust padding */
            border: 1px solid #ddd;
            display: flex;
            align-items: center; /* Vertically center items */
