--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -23,21 +23,21 @@
            background-color: rgb(226, 226, 226);
            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
            border-radius: 8px;
-       }
-       h1 {
-           color: #333;
-       }
+        }
+        h1 {
+             color: #333;
+        }
         ul {
-        list-style-type: none;
-        padding: 0;
-        overflow-y: auto; /* Add vertical scrollbar if content exceeds container height */
-        max-height: 400px; /* Adjust the max height based on your preference */
+            list-style-type: none;
+            padding: 10px; /* Increase the padding to create more space */
+            overflow-y: auto; /* Add vertical scrollbar if content exceeds container height */
+            max-height: 400px; /* Adjust the max height based on your preference */
         }
 
         li {
             background-color: rgb(226, 226, 226);
-            margin: 5px 0;
-            padding: 10px;
+            margin: 10px 0; /* Increase margin to add space between list items */
+            padding: 20px; /* Increase padding to provide more space within list items */
             border: 1px solid #ddd;
             position: relative;
             word-wrap: break-word; /* Wrap long text to prevent overflow */
