--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -29,6 +29,7 @@
           position: relative;
           max-width: 700px; /* Set a maximum width for each list item */
           margin: auto; /* Center each list item horizontally */
+          box-sizing: border-box;
         }
 
       .rating {
