--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -35,8 +35,8 @@
            display: block; /* Each movie info on a new line */
        }
        .movie-info img {
-           max-width: 100px;
-           height: auto;
+           max-width: 80px;
+           height: 120px;
            margin-right: 10px;
        }
        .rating {
