--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -21,14 +21,14 @@
       li {
           background-color: rgb(226, 226, 226);
           margin: 5px 0;
-          padding: 5px;
+          padding: 10px;
           border: 1px solid #ddd;
           position: relative;
       }
       .rating {
           position: absolute;
           top: 0;
-          right: 0;
+          left: 10px;
           transform: translateY(50%);
           padding: 0 10px;
           font-style: italic;
@@ -49,7 +49,6 @@
       .movie-info {
           display: flex;
           align-items: center;
-          max-width: 200px; /* Adjust the maximum width as needed */
       }
       .movie-info span {
           margin-right: 20px;
