--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -27,8 +27,8 @@
       }
       .rating {
           position: absolute;
-          top: 0;
-          left: 10px;
+          bottom: 0;
+          left: 0;
           transform: translateY(50%);
           padding: 0 10px;
           font-style: italic;
