--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -27,7 +27,7 @@
       }
       .rating {
           position: absolute;
-          bottom: 0;
+          bottom: 10px;
           left: 0;
           transform: translateY(50%);
           padding: 0 10px;
