--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -17,14 +17,22 @@
       ul {
           list-style-type: none;
           padding: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
       }
+
       li {
           background-color: rgb(226, 226, 226);
-          margin: 5px 0;
+          margin: 10px 0; /* Increase or decrease margin as needed */
           padding: 10px;
           border: 1px solid #ddd;
+          width: 80%; /* Adjust the width of the white box */
+          max-width: 400px; /* Limit the maximum width */
+          box-sizing: border-box; /* Include padding and border in the width */
           position: relative;
       }
+
       .rating {
           position: absolute;
           bottom: 10px;
