--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -15,23 +15,20 @@
           color: #222222;
       }
       ul {
-          list-style-type: none;
-          padding: 0;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-      }
+        list-style-type: none;
+        padding: 0;
+        column-count: 4; /* This sets the number of columns to 4 */
+        }
 
-      li {
-          background-color: rgb(226, 226, 226);
-          margin: 5px 0; /* Increase or decrease margin as needed */
-          padding: 10px;
-          border: 1px solid #ddd;
-          width: 80%; /* Adjust the width of the white box */
-          max-width: 400px; /* Limit the maximum width */
-          box-sizing: border-box; /* Include padding and border in the width */
-          position: relative;
-      }
+    li {
+        background-color: rgb(226, 226, 226);
+        margin: 5px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        position: relative;
+        break-inside: avoid; /* This prevents a box from breaking across columns */
+    }
+
 
       .rating {
           position: absolute;
