--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -18,7 +18,7 @@
         list-style-type: none;
         padding: 0;
         column-count: 4; /* This sets the number of columns to 4 */
-        height: auto;
+        height: 10px;
         }
 
     li {
