--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -30,6 +30,7 @@
         height: 200px; /* Set a fixed height for the boxes */
         display: flex; /* Use flexbox for vertical alignment */
         align-items: center; /* Align items vertically */
+        justify-content: center; /* Align items horizontally */
     }
 
 
@@ -44,7 +45,7 @@
       }
       a {
           display: inline-block;
-          margin-top: 30px;
+          margin-top: 20px;
           padding: 10px 20px;
           font-size: 16px;
           background-color: #007BFF;
