--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -17,7 +17,7 @@
       ul {
         list-style-type: none;
         padding: 0;
-        column-count: 4; /* This sets the number of columns to 4 */
+        column-count: 4;
         }
 
     li {
@@ -26,11 +26,8 @@
         padding: 10px;
         border: 1px solid #ddd;
         position: relative;
-        break-inside: avoid; /* This prevents a box from breaking across columns */
-        height: 200px; /* Set a fixed height for the boxes */
-        display: flex; /* Use flexbox for vertical alignment */
-        align-items: center; /* Align items vertically */
-        justify-content: center; /* Align items horizontally */
+        break-inside: avoid;
+        height: 200px;
     }
 
 
