--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -62,8 +62,8 @@
       .movie-info img {
           margin-right: 10px;
           max-width: 100px;
-          max-height: 150px; /* Set a fixed height for the poster images */
-          height: 100%; /* Ensure the image fills the available height */
+          max-height: 150px;
+          height: 100%;
       }
   </style>
 </head>
