--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -18,6 +18,7 @@
         list-style-type: none;
         padding: 0;
         column-count: 2;
+        column-fill: balance;
         }
 
     li {
